<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/daftar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/form_horizontal_margin"
        android:paddingEnd="@dimen/form_horizontal_margin"
        android:paddingTop="@dimen/form_vertical_margin"
        android:paddingBottom="@dimen/form_vertical_margin"
        android:background="#F5F5F5"
        tools:context=".DaftarCekKesehatan">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_vertical"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.95">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_internal_padding"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/logo"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/app_title"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="#4A148C"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_vertical"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader"
            app:layout_constraintWidth_percent="0.95">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_internal_padding"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/tvFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registration Form"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:textColor="#424242"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="#E0E0E0"
                    app:layout_constraintTop_toBottomOf="@+id/tvFormTitle" />

                <TextView
                    android:id="@+id/tvLabelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="Full Name"
                    android:textColor="#616161"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <EditText
                    android:id="@+id/etNama"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_nama"
                    android:inputType="text"
                    android:padding="@dimen/input_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

                <TextView
                    android:id="@+id/tvLabelDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="Date of Birth"
                    android:textColor="#616161"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNama" />

                <EditText
                    android:id="@+id/etDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_dob"
                    android:inputType="none"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/spacing_small"
                    android:focusable="false"
                    android:clickable="true"
                    android:padding="@dimen/input_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelDob" />

                <TextView
                    android:id="@+id/tvLabelMcu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="MCU Schedule"
                    android:textColor="#616161"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDateOfBirth" />

                <Spinner
                    android:id="@+id/mcuDateSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:background="@drawable/spinner_background"
                    android:padding="@dimen/input_padding"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelMcu" />

                <TextView
                    android:id="@+id/tvLabelNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="Additional Information"
                    android:textColor="#616161"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mcuDateSpinner" />

                <EditText
                    android:id="@+id/etAdditionalNotes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_notes"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top|start"
                    android:padding="@dimen/input_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelNotes" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_vertical"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardForm"
            app:layout_constraintWidth_percent="0.95">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_internal_padding"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/tvPhotoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Photo"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:textColor="#424242"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="#E0E0E0"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhotoTitle" />

                <Button
                    android:id="@+id/btnTakePhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/teal_button_background"
                    android:text="@string/btn_take_photo"
                    android:drawableStart="@drawable/ic_camera"
                    android:drawablePadding="@dimen/spacing_small"
                    android:paddingStart="@dimen/button_padding_horizontal"
                    android:paddingEnd="@dimen/button_padding_horizontal"
                    android:paddingTop="@dimen/button_padding_vertical"
                    android:paddingBottom="@dimen/button_padding_vertical"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dividerPhoto" />

                <FrameLayout
                    android:id="@+id/photoPreviewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto">

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:background="#EFEFEF"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintWidth_percent="0.6" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/blue_button_background"
            android:text="@string/btn_submit"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_medium"
            android:paddingTop="@dimen/button_padding_vertical"
            android:paddingBottom="@dimen/button_padding_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPhoto"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>